snapshots/if_changed__parser__tests__it_parses.snap
---
source: parser.rs
expression: "Parser::new(file.path()).unwrap().collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        IfChangedBlock {
            name: None,
            range: (
                2,
                4,
            ),
            patterns: [
                NamedPattern {
                    name: None,
                    pattern: "foo.rs",
                    line: 4,
                },
            ],
        },
        IfChangedBlock {
            name: Some(
                "some-name",
            ),
            range: (
                6,
                8,
            ),
            patterns: [
                NamedPattern {
                    name: None,
                    pattern: "foo.rs",
                    line: 8,
                },
            ],
        },
    ],
)
