snapshots/if_changed__parser__tests__it_parses_empty_files.snap
---
source: parser.rs
assertion_line: 353
expression: "Parser::new(file.path()).unwrap().collect::<Result<Vec<_>, _>>()"
---
Ok(
    [],
)
