snapshots/if_changed__parser__tests__it_parses_empty_path_with_name.snap
---
source: parser.rs
expression: "Parser::new(file.path()).unwrap().collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        IfChangedBlock {
            name: Some(
                "a",
            ),
            range: (
                2,
                4,
            ),
            patterns: [
                Pattern {
                    name: Some(
                        "b",
                    ),
                    value: "",
                    line: 4,
                },
            ],
        },
        IfChangedBlock {
            name: Some(
                "b",
            ),
            range: (
                6,
                8,
            ),
            patterns: [
                Pattern {
                    name: Some(
                        "a",
                    ),
                    value: "",
                    line: 8,
                },
            ],
        },
    ],
)
