snapshots/if_changed__parser__tests__it_parses_inline_blocks.snap
---
source: parser.rs
expression: "Parser::new(file.path()).unwrap().collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        IfChangedBlock {
            name: None,
            range: (
                1,
                1,
            ),
            patterns: [
                NamedPattern {
                    name: None,
                    pattern: "foo.rs",
                    line: 1,
                },
            ],
        },
    ],
)
