snapshots/if_changed__parser__tests__it_parses_multiple_paths_multiline.snap
---
source: parser.rs
expression: "Parser::new(file.path()).unwrap().collect::<Result<Vec<_>, _>>()"
---
Ok(
    [
        IfChangedBlock {
            name: None,
            range: (
                2,
                4,
            ),
            patterns: [
                Pattern {
                    name: None,
                    value: "foo.rs",
                    line: 5,
                },
                Pattern {
                    name: None,
                    value: "bar.rs",
                    line: 6,
                },
            ],
        },
        IfChangedBlock {
            name: None,
            range: (
                9,
                11,
            ),
            patterns: [
                Pattern {
                    name: None,
                    value: "foo.rs",
                    line: 11,
                },
                Pattern {
                    name: None,
                    value: "bar.rs",
                    line: 12,
                },
            ],
        },
        IfChangedBlock {
            name: None,
            range: (
                15,
                17,
            ),
            patterns: [
                Pattern {
                    name: None,
                    value: "foo.rs",
                    line: 17,
                },
                Pattern {
                    name: None,
                    value: "bar.rs",
                    line: 18,
                },
            ],
        },
        IfChangedBlock {
            name: None,
            range: (
                20,
                22,
            ),
            patterns: [
                Pattern {
                    name: None,
                    value: "foo.rs",
                    line: 22,
                },
                Pattern {
                    name: None,
                    value: "bar.rs",
                    line: 23,
                },
            ],
        },
        IfChangedBlock {
            name: None,
            range: (
                26,
                28,
            ),
            patterns: [
                Pattern {
                    name: None,
                    value: "foo.rs",
                    line: 29,
                },
                Pattern {
                    name: None,
                    value: "bar.rs",
                    line: 30,
                },
            ],
        },
    ],
)
